--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "company website made using materialize css and react js",
   "main": "index.jsx",
   "scripts": {
+    "build": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,12 +21,16 @@
     "url": "https://github.com/giuunit/giuliano-dore/issues"
   },
   "homepage": "https://github.com/giuunit/giuliano-dore#readme",
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "@babel/preset-react": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12"
+  },
   "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
